--- a/concursosdep/index.html
+++ b/concursosdep/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@200;400;600&display=swap" rel="stylesheet">
     <script src="p5.min.js"></script>
     <script src="p5.dom.min.js"></script>
-    <script src="p5.sound.min.js"></script>
+    <!-- <script src="p5.sound.min.js"></script> -->
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
